<resources>
    <string name="app_name">UCAL TPMS</string>
    <string name="start_scan">Start Scan</string>
    <string name="scanned_devices">Scanned Devices</string>
    <string name="ble_permission_rationale">This app needs to access bluetooth and location in order to scan for BLE devices.</string>
    <string name="ble_permissions_denied_message">Some permissions were not granted, please grant them and try again</string>
    <string name="pressure">Pressure: </string>
    <string name="temperature">Temperature: </string>
    <string name="accelerometer">Accelerometer: </string>
    <string name="battery">Battery: </string>
    <string name="v">V</string>
    <string name="g">g</string>
    <string name="c">°C</string>
    <string name="psi">PSi</string>
    <string name="download_log">Download Log</string>
</resources>